--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
           <div class="col-md-5">
             <div class="panel panel-default">
               <div class="panel-body">
-                <p>Am finalizat strângerea de semnături pentru ca Uniunea Salvați România (USR) să poată candida la <strong>alegerile parlamentare din 11 decembrie 2016.</strong></p>
-                <p>Ne-am fixat ca obiectiv strângerea a 200.000 de semnături şi la început ni s-a părut greu, dar cu ajutorul dumneavoastră ne-am depășit obiectivul şi am ajuns la <strong>350.781 de semnături!</strong></p>
-                <p>Mulţumim tuturor celor care au semnat și mai ales tuturor celor care au strâns semnături pentru noi!</p>
+                <p>Cu ajutorul tău am strans 350.781 de semnături! Am selectat candidați onești și competenți, iar pe 11 decembrie vom fi pe buletinele de vot în toate județele din România.</p>
+                <p>În continuare, este important să ne asiguram că procesul de votare va fi unul corect așa că avem nevoie de ajutorul tău din nou.</p>
+                <p>Completează formularul de mai jos pentru a putea fi reprezentant sau delegat al USR într-o secție de votare.</p>
               </div>
               <div class="panel-footer">
                 <a class="btn btn-default" href="https://usr.ro/" target="_blank" onclick="ga('send', 'event', 'pagina_semnaturi', 'buton', 'continuam_usr')">
                   <span class="glyphicon glyphicon-menu-right"></span>
-                  Continuăm mai departe împreună!
+                  Completează formularul
                 </a>
               </div>
             </div>
@@ -118,6 +118,7 @@
               <div class="media-body">
                 <h3 class="media-heading">Vreau alegeri corecte!</h3>
                 <p>Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
+                <p>Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
                 <p>Vreau să fiu:</p>
                 <ul class="nav nav-pills nav-justified" role="tablist">
                   <li role="presentation" class="active"><a href="#reprezentant" aria-controls="reprezentant" role="tab" data-toggle="tab">Reprezentant</a></li>
@@ -532,7 +533,10 @@
                         <input type="hidden" name="recaptcha">
                       </div>
                       <small class="help-block">Prin completarea prezentului formular, persoana vizată își exprimă consimțământul pentru prelucrarea datelor sale cu caracter personal de către Uniunea Salvați România, în scopul desemnării de reprezentanți si delegați în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016, și pentru comunicarea acestor date cu caracter personal către birourile și oficiile electorale competente, în conformitate cu dispozițiile art. 15 alin. (5), art. 89 alin. (11) din Legea nr. 208/2015 privind alegerea Senatului și a Camerei Deputaților, și art. 5 din Decizia Biroului Electoral Central nr. 73D/21.10.2016 privind unele măsuri pentru buna organizare și desfășurare a alegerilor pentru Senat și Camera Deputaților din data de 11 decembrie 2016. Nefurnizarea datelor cu caracter personal cerute prin prezentul formular atrage imposibilitatea desemnării persoanei vizate ca reprezentant sau delegat al Uniunii Salvați România în secțiile de votare organizate pentru alegerile parlamentare din data de 11 decembrie 2016. În conformitate cu dispozițiile Legii nr. 677/2001 pentru protecția persoanelor cu privire la prelucrarea datelor cu caracter personal și libera circulație a acestor date, persoana vizată își poate exercita dreptul de acces la date, dreptul de intervenție asupra datelor sau dreptul de opoziție justificată, prin transmiterea unei cereri scrise, datate și semnate către Uniunea Salvați România, la adresa de email <a href="mailto:alegeri@usr.ro">alegeri@usr.ro</a>.</small>
-                      <button class="btn btn-default" type="submit">Vreau alegeri corecte!</button>
+                      <button class="btn btn-default" type="submit">
+                        <span class="glyphicon glyphicon-menu-right"></span>
+                        Vreau alegeri corecte!
+                      </button>
                       <span class="spinner" aria-hidden="true"></span>
                     </form>
                   </div>
@@ -944,7 +948,6 @@
                   <strong>Atenție!</strong>
                   Solicitarea de înscriere nu a fost trimisă, încercați din nou.
                 </div>
-                <p>Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
               </div>
             </li>
           </ul>
