--- a/index.html
+++ b/index.html
@@ -514,13 +514,13 @@
                           </div>
                         </div>
                       </div>
-                      <div class="form-group required">
+                      <div class="form-group">
                         <label class="control-label" for="localitate-delegat">Localitatea unde doresc să activez:</label>
-                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" required>
+                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" placeholder="Prin necompletare sunt de acord să activez și în altă localitate din județ">
                       </div>
                       <div class="form-group">
                         <label class="control-label" for="observatii-reprezentant">Observații:</label>
-                        <textarea class="form-control" id="observatii-reprezentant" name="observatii" rows="3"></textarea>
+                        <textarea class="form-control" id="observatii-reprezentant" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare"></textarea>
                       </div>
                       <div class="checkbox required">
                         <label class="control-label">
@@ -917,13 +917,13 @@
                           </div>
                         </div>
                       </div>
-                      <div class="form-group required">
+                      <div class="form-group">
                         <label class="control-label" for="localitate-delegat">Localitatea unde doresc să activez:</label>
-                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" required>
+                        <input type="text" class="form-control" id="localitate-delegat" name="localitate" placeholder="Prin necompletare sunt de acord să activez și în altă localitate din județ">
                       </div>
                       <div class="form-group">
                         <label class="control-label" for="observatii-delegat">Observații:</label>
-                        <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3"></textarea>
+                        <textarea class="form-control" id="observatii-delegat" name="observatii" rows="3" placeholder="De exemplu zona din localitate unde doresc repartizare"></textarea>
                       </div>
                       <div class="checkbox required">
                         <label class="control-label">
