--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
           <div class="statistics">
             <div class="statistic statistic-primary">
               <div class="value">00</div>
-              <div class="label">Reprezentanți</div>
+              <div class="label">Înscrieri validate</div>
             </div>
             <div class="statistic statistic-separator">
               <div class="value">/</div>
             </div>
             <div class="statistic statistic-secondary">
               <div class="value">00</div>
-              <div class="label">Delegați</div>
+              <div class="label">Secții de votare</div>
             </div>
           </div>
-          <div id="progres-semnaturi"></div>
+          <div id="progres-inscrieri"></div>
         </div>
       </div>
       <div class="row">
