Updated title and progress styles

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Strângem semnături pentru ca Uniunea Salvați România (USR) să candideze la alegerile parlamentare din 11 decembrie 2016. Ne vei găsi pe buletinul de vot doar dacă semnezi pentru noi!">
     <meta name="author" content="USR">
     <meta property="og:url" content="https://alegeri.usr.ro/">
-    <meta property="og:title" content="Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!">
-    <meta property="og:description" content="Strângem semnături pentru ca Uniunea Salvați România (USR) să candideze la alegerile parlamentare din 11 decembrie 2016. Ne vei găsi pe buletinul de vot doar dacă semnezi pentru noi!">
+    <meta property="og:title" content="Asigură corectitudinea procesului electoral din ziua votului!">
+    <meta property="og:description" content="Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!">
     <meta property="og:image" content="https://alegeri.usr.ro/assets/app/img/alegeri.jpg">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.ico" rel="icon">
-    <title>USR &middot; Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</title>
+    <title>USR &middot; Asigură corectitudinea procesului electoral din ziua votului!</title>
     <link href="https://code.cdn.mozilla.net/fonts/fira.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/ion-rangeslider/css/ion.rangeSlider.css" rel="stylesheet">
@@ -33,7 +33,7 @@
             </a>
           </div>
           <div class="media-body">
-            <h1>Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</h1>
+            <h1>Asigură corectitudinea procesului electoral din ziua votului!</h1>
           </div>
           <div class="media-right">
             <a class="btn btn-inverted" href="https://www.nicusordan.ro/doneaza/" target="_blank" onclick="ga('send', 'event', 'pagina_alegeri', 'buton', 'doneaza')">Donează</a>
@@ -78,14 +78,14 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="statistics">
             <div class="statistic statistic-primary">
-              <div class="value">00</div>
+              <div class="value">00000</div>
               <div class="label">Înscrieri validate</div>
             </div>
             <div class="statistic statistic-separator">
               <div class="value">/</div>
             </div>
             <div class="statistic statistic-secondary">
-              <div class="value">00</div>
+              <div class="value">19133</div>
               <div class="label">Secții de votare</div>
             </div>
           </div>
@@ -118,7 +118,7 @@
               <div class="media-body">
                 <h3 class="media-heading">Vreau alegeri corecte!</h3>
                 <p>Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
-                <p>Termenul limită de înscriere a reprezenților este pe 25 noiembrie, iar al delegaților pe 4 decembrie.</p>
+                <p>Termenul limită de înscriere a reprezenților este pe 23 noiembrie, iar al delegaților pe 2 decembrie.</p>
                 <p>Vreau să fiu:</p>
                 <ul class="nav nav-pills nav-justified" role="tablist">
                   <li role="presentation" class="active"><a href="#reprezentant" aria-controls="reprezentant" role="tab" data-toggle="tab">Reprezentant</a></li>
