Updated site url

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Strângem semnături pentru ca Uniunea Salvați România (USR) să candideze la alegerile parlamentare din 11 decembrie 2016. Ne vei găsi pe buletinul de vot doar dacă semnezi pentru noi!">
     <meta name="author" content="USR">
-    <meta property="og:url" content="https://alegeri.usr.ro/">
+    <meta property="og:url" content="https://usr.ro/alegeri/">
     <meta property="og:title" content="Asigură corectitudinea procesului electoral din ziua votului!">
     <meta property="og:description" content="Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!">
-    <meta property="og:image" content="https://alegeri.usr.ro/assets/app/img/alegeri.jpg">
+    <meta property="og:image" content="https://usr.ro/alegeri/assets/app/img/alegeri.jpg">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.ico" rel="icon">
     <title>USR &middot; Asigură corectitudinea procesului electoral din ziua votului!</title>
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="media media-brand">
           <div class="media-left">
-            <a href="https://alegeri.usr.ro/">
+            <a href="https://usr.ro/alegeri/">
               <img class="media-object" src="assets/app/img/logo.png" alt="USR">
             </a>
           </div>
@@ -989,7 +989,7 @@
       </div>
     </div>
     <div class="social-media">
-      <a class="facebook" href="https://www.facebook.com/sharer.php?u=https://alegeri.usr.ro/" target="_blank">
+      <a class="facebook" href="https://www.facebook.com/sharer.php?u=https://usr.ro/alegeri/" target="_blank">
         <img src="assets/app/img/logo-facebook-inverted.png" alt="Facebook">
         Distribuie
       </a>
