Prevent selecting invalid matches

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                           <div class="form-group required">
                             <label class="control-label" for="tara-reprezentant">Țara:</label>
                             <select class="form-control" id="tara-reprezentant" name="tara" required>
+                              <option class="hidden" selected disabled>&mdash; Alege țara &mdash;</option>
                               <option value="Afghanistan">Afghanistan</option>
                               <option value="Åland Islands">Åland Islands</option>
                               <option value="Albania">Albania</option>
@@ -436,7 +437,7 @@
                               <option value="Puerto Rico">Puerto Rico</option>
                               <option value="Qatar">Qatar</option>
                               <option value="Réunion">Réunion</option>
-                              <option value="Romania" selected>Romania</option>
+                              <option value="Romania">Romania</option>
                               <option value="Russian Federation">Russian Federation</option>
                               <option value="Rwanda">Rwanda</option>
                               <option value="Saint Barthélemy">Saint Barthélemy</option>
@@ -648,6 +649,7 @@
                           <div class="form-group required">
                             <label class="control-label" for="tara-delegat">Țara:</label>
                             <select class="form-control" id="tara-delegat" name="tara" required>
+                              <option class="hidden" selected disabled>&mdash; Alege țara &mdash;</option>
                               <option value="Afghanistan">Afghanistan</option>
                               <option value="Åland Islands">Åland Islands</option>
                               <option value="Albania">Albania</option>
@@ -839,7 +841,7 @@
                               <option value="Puerto Rico">Puerto Rico</option>
                               <option value="Qatar">Qatar</option>
                               <option value="Réunion">Réunion</option>
-                              <option value="Romania" selected>Romania</option>
+                              <option value="Romania">Romania</option>
                               <option value="Russian Federation">Russian Federation</option>
                               <option value="Rwanda">Rwanda</option>
                               <option value="Saint Barthélemy">Saint Barthélemy</option>
