--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="USR">
     <meta property="og:url" content="https://usr.ro/alegeri/">
     <meta property="og:title" content="Asigură corectitudinea procesului electoral din ziua votului!">
-    <meta property="og:description" content="Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!">
+    <meta property="og:description" content="Înscrie-te ca reprezentant sau delegat ca să asigurăm corectitudinea procesului electoral din ziua votului!">
     <meta property="og:image" content="https://usr.ro/alegeri/assets/app/img/alegeri.jpg">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.ico" rel="icon">
@@ -103,11 +103,17 @@
                 <h3 class="media-heading">Înscrie-te ca reprezentant sau delegat</h3>
                 <dl>
                   <dt>Reprezentant</dt>
-                  <dd>Membru în biroul electoral al unei secții de votare din partea USR. Participă la procesul de vot de la deschiderea secției (6 dimineața) până la încheierea proceselor verbale cu rezultatul alegerilor din acea secție (1-2 noaptea). Este remunerat de către stat.</dd>
+                  <dd>
+                    <p>Are <em>obligaţia legală de a participa</em> la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din Legea nr. 208/2015). <em>Trebuie</em> să fie prezent în secţia de votare atât în <em>preziua alegerilor</em> (10 decembrie 2016) la ora 18:00, cât şi în <em>ziua alegerilor</em> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</p>
+                    <p>Potrivit dispoziţiilor H.G. nr. 637/2016, va primi din partea statului o <em>indemnizaţie de 65 de lei</em> pentru fiecare zi de activitate, dar nu mai mult de 3 zile (prin zi de activitate se înţelege munca desfăşurată pe parcursul unei zile calendaristice, indiferent de numărul de ore prestate, dar nu mai puţin de 6 ore pe zi).</p>
+                  </dd>
                 <dl>
                 </dl>
-                  <dt>Delegat</dt>
-                  <dd>Are dreptul de a asista la procesul de votare din partea USR. Poate face sesizări dacă observă nereguli. Perioada critică care trebuie acoperită este numărarea voturilor (de la 9 seara până la 1-2 noaptea).</dd>
+                  <dt>Delegatul acreditat</dt>
+                  <dd>
+                    <p>Poate asista la <em>toate</em> operaţiunile electorale dintr-o secţie de votare în ziua alegerilor (11 decembrie 2016), începând cu ora 6:00 şi terminând cu momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă, aşadar <em>inclusiv la operaţiunea de numărare a voturilor din secţia respectivă</em> (operaţiune care începe în ziua alegerilor la ora 21:00, după închiderea localului secţiei de votare).</p>
+                    <p>Poate staţiona în spaţiul stabilit în sala de votare de către preşedintele biroului electoral al secţiei de votare şi are dreptul de a sesiza în scris preşedintele biroului electoral în cazul constatării unor neregularităţi. Nu primeşte indemnizaţie din partea statului.</p>
+                  </dd>
                 </dl>
               </div>
             </li>
@@ -964,7 +970,7 @@
             <div class="panel-body">
               <div class="media">
                 <div class="media-body">
-                  <p><strong>Vreau alegeri corecte! Înscrie-te ca să asigurăm corectitudinea procesului electoral din ziua votului!</strong></p>
+                  <p><strong>Vreau alegeri corecte! Înscrie-te ca reprezentant sau delegat ca să asigurăm corectitudinea procesului electoral din ziua votului!</strong></p>
                   <p>Mulțumim!</p>
                 </div>
                 <div class="media-right media-middle">
