--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <p>Cu ajutorul tău am strans 350.781 de semnături! Am selectat candidați onești și competenți, iar pe 11 decembrie vom fi pe buletinele de vot în toate județele din România.</p>
-                <p>În continuare, este important să ne asiguram că procesul de votare va fi unul corect așa că avem nevoie de ajutorul tău din nou.</p>
+                <p>În ziua alegerilor, este important să ne asigurăm că procesul de votare va fi unul corect. Dacă noi îi putem observa, ei nu ne mai pot frauda!</p>
                 <p>Completează formularul de mai jos pentru a putea fi reprezentant sau delegat al USR într-o secție de votare.</p>
               </div>
               <div class="panel-footer">
                 <a class="btn btn-default" href="#inscriere" data-trigger="scroll" onclick="ga('send', 'event', 'pagina_alegeri', 'buton', 'completeaza_formularul')">
                   <span class="glyphicon glyphicon-menu-right"></span>
-                  Completează formularul
+                  Înscrie-te ca reprezentant/delegat
                 </a>
               </div>
             </div>
