--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
                     <p>Poate staţiona în spaţiul stabilit în sala de votare de către preşedintele biroului electoral al secţiei de votare şi are dreptul de a sesiza în scris preşedintele biroului electoral în cazul constatării unor neregularităţi. Nu primeşte indemnizaţie din partea statului.</p>
                   </dd>
                 </dl>
+                <h4>FAQ</h4>
+                <dl>
+                  <dt>Trebuie să fiu membru USR?</dt>
+                  <dd>Reprezentantul sau delegatul acreditat poate sau nu sp fie membru al Uniunii Salvați România.</dd>
+                </dl>
+                <dl>
+                  <dt>Trebuie să am reședinta/domiciliul în judetul unde voi observa procesul electoral?</dt>
+                  <dd>Nu.</dd>
+                </dl>
+                <dl>
+                  <dt>Ce putere are un reprezentant? Dar un delegat?</dt>
+                  <dd>Atât reprezentantul, cât și delegatul au dreptul de a sesiza (în scris) președintele biroului secției de votare cu privire la nereguli, iar președintele biroului secției de votare trebuie să soluționeze sesizarea. În plus față de delegați, legea conferă reprezentanților (și candidaților) dreptul de a contesta identitatea persoanei care se prezintă la vot. În rest, principala diferență dintre reprezentant și delegat este aceea că reprezentantul participă la operațiunile biroului electoral, în timp ce delegatul asistă la aceste operațiuni.</dd>
+                </dl>
+                <dl>
+                  <dt>Dacă nu mai reușesc să ajung în ziua votului?</dt>
+                  <dd>Reprezentantul are <em>obligaţia legală de a participa</em> la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din Legea nr. 208/2015). Neparticiparea poate sa atragă o sancțiune conform art. 99 (alin. 1), între 1500-4500 lei.</dd>
+                </dl>
               </div>
             </li>
             <li class="media" id="inscriere">
