Updated signup section

--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
                 <img class="media-object" src="assets/app/img/icon-trimite.png" alt="Vreau alegeri corecte!">
               </div>
               <div class="media-body">
-                <h3 class="media-heading">Vreau alegeri corecte!</h3>
-                <p>Ne trebuie cât mai mulți reprezentanți și delegați care să supravegheze procesul de votare, așa că te rugăm să vorbești cu prietenii, familia și vecinii tăi să completeze și ei formularul.</p>
-                <p>Termenul limită de înscriere a reprezenților este pe 23 noiembrie, iar al delegaților pe 2 decembrie.</p>
+                <h3 class="media-heading">Înscrie-te mai jos!</h3>
                 <p>Vreau să fiu:</p>
                 <ul class="nav nav-pills nav-justified" role="tablist">
                   <li role="presentation" class="active"><a href="#reprezentant" aria-controls="reprezentant" role="tab" data-toggle="tab">Reprezentant</a></li>
