Added due dates

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                       <input type="hidden" name="tip" value="reprezentant">
                       <p><strong>Reprezentantul</strong> are <em>obligaţia legală de a participa</em> la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din Legea nr. 208/2015). <em>Trebuie</em> să fie prezent în secţia de votare atât în <em>preziua alegerilor</em> (10 decembrie 2016) la ora 18:00, cât şi în <em>ziua alegerilor</em> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</p>
                       <p>Potrivit dispoziţiilor H.G. nr. 637/2016, va primi din partea statului o <em>indemnizaţie de 65 de lei</em> pentru fiecare zi de activitate, dar nu mai mult de 3 zile (prin zi de activitate se înţelege munca desfăşurată pe parcursul unei zile calendaristice, indiferent de numărul de ore prestate, dar nu mai puţin de 6 ore pe zi).</p>
+                      <p><strong>Termen limită înscriere:</strong> 23 noiembrie</p>
                       <div class="checkbox">
                         <label class="control-label">
                           <input type="checkbox" name="delegat" checked>
@@ -530,6 +531,7 @@
                       <input type="hidden" name="tip" value="delegat">
                       <p><strong>Delegatul acreditat</strong> poate asista la <em>toate</em> operaţiunile electorale dintr-o secţie de votare în ziua alegerilor (11 decembrie 2016), începând cu ora 6:00 şi terminând cu momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă, aşadar <em>inclusiv la operaţiunea de numărare a voturilor din secţia respectivă</em> (operaţiune care începe în ziua alegerilor la ora 21:00, după închiderea localului secţiei de votare).</p>
                       <p>Poate staţiona în spaţiul stabilit în sala de votare de către preşedintele biroului electoral al secţiei de votare şi are dreptul de a sesiza în scris preşedintele biroului electoral în cazul constatării unor neregularităţi. Nu primeşte indemnizaţie din partea statului.</p>
+                      <p><strong>Termen limită înscriere:</strong> 2 decembrie</p>
                       <div class="row">
                         <div class="col-xs-6">
                           <div class="form-group required">
