--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <ul class="media-list">
             <li class="media" id="inscriere">
               <div class="media-left">
-                <img class="media-object" src="assets/app/img/icon-trimite.png" alt="Vreau alegeri corecte!">
+                <img class="media-object" src="assets/app/img/icon-inscriere.png" alt="Înscrie-te ca reprezentant sau delegat">
               </div>
               <div class="media-body">
                 <h3 class="media-heading">Înscrie-te ca reprezentant sau delegat</h3>
@@ -941,8 +941,14 @@
                   <strong>Atenție!</strong>
                   Solicitarea de înscriere nu a fost trimisă, încercați din nou.
                 </div>
-                <hr>
-                <h4>FAQ</h4>
+              </div>
+            </li>
+            <li class="media">
+              <div class="media-left">
+                <img class="media-object" src="assets/app/img/icon-intrebari.png" alt="Întrebări frecvente">
+              </div>
+              <div class="media-body">
+                <h3 class="media-heading">Întrebări frecvente</h3>
                 <dl>
                   <dt>Trebuie să fiu membru USR?</dt>
                   <dd>Reprezentantul sau delegatul acreditat poate sau nu sp fie membru al Uniunii Salvați România.</dd>
