--- a/index.html
+++ b/index.html
@@ -1044,6 +1044,7 @@
               <div class="col-sm-6 col-md-4">Badiu Călin-Claudiu</div>
               <div class="col-sm-6 col-md-4">Bagaian-Nicula Iulia-Andrea</div>
               <div class="col-sm-6 col-md-4">Băilă Ciprian</div>
+              <div class="col-sm-6 col-md-4">Băltăţescu Sînziana</div>
               <div class="col-sm-6 col-md-4">Balaci Silviu</div>
               <div class="col-sm-6 col-md-4">Balan Marius-Romeo</div>
               <div class="col-sm-6 col-md-4">Băloi Ionuț-Cosmin</div>
