precizare vot in afara judetului

--- a/index.html
+++ b/index.html
@@ -960,7 +960,12 @@
                 </dl>
                 <dl>
                   <dt>Trebuie să am reședinta sau domiciliul în județul unde voi observa procesul electoral?</dt>
-                  <dd>Nu, acest lucru nu este obligatoriu.</dd>
+                  <dd>Nu, acest lucru nu este obligatoriu. Dar dacă doriţi să fiţi distribuiţi ca reprezentant sau delegat într-o localitate din alt judeţ, e important de ştiut că <u>nu veţi putea vota</u>. Un cetăţean român cu drept de vot poate vota doar în:
+                      <ul class="list list-bulleted">
+                        <li>localitatea de domiciliu sau de reședință (la secția de vot unde este arondat);</li>
+                        <li>interiorul județului în care are domiciliul sau reședința, pe liste suplimentare, în caz că este plecat din localitatea în care locuiește.</li>
+                      </ul>
+                  </dd>
                 </dl>
                 <dl>
                   <dt>Ce putere are un reprezentant în secţia de vot? Dar un delegat?</dt>
