--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <div role="tabpanel" class="tab-pane fade in active" id="reprezentant">
                     <form class="form-reprezentant" method="post">
                       <input type="hidden" name="tip" value="reprezentant">
-                      <p><strong>Reprezentantul</strong> are <em>obligaţia legală</em> de a participa la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din <a href="http://legislatie.just.ro/Public/DetaliiDocument/170037">Legea nr. 208/2015</a>). Trebuie să fie prezent în secţia de votare atât în:
+                      <p><strong>Reprezentantul</strong> are <em>obligaţia legală</em> de a participa la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din <a href="http://legislatie.just.ro/Public/DetaliiDocument/170037">Legea nr. 208/2015</a>). Trebuie să fie prezent în secţia de votare atât în:</p>
                       <ul class="list list-bulleted">
                         <li><b>preziua alegerilor</b> (10 decembrie 2016) la ora 18:00, cât şi în</li>
                         <li><b>ziua alegerilor</b> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</li>
@@ -960,11 +960,12 @@
                 </dl>
                 <dl>
                   <dt>Trebuie să am reședinta sau domiciliul în județul unde voi observa procesul electoral?</dt>
-                  <dd>Nu, acest lucru nu este obligatoriu. Dar dacă doriţi să fiţi distribuiţi ca reprezentant sau delegat într-o localitate din alt judeţ, e important de ştiut că <u>nu veţi putea vota</u>. Un cetăţean român cu drept de vot poate vota doar în:
-                      <ul class="list list-bulleted">
-                        <li>localitatea de domiciliu sau de reședință (la secția de vot unde este arondat);</li>
-                        <li>interiorul județului în care are domiciliul sau reședința, pe liste suplimentare, în caz că este plecat din localitatea în care locuiește.</li>
-                      </ul>
+                  <dd>
+                    <p>Nu, acest lucru nu este obligatoriu. Dar dacă doriţi să fiţi distribuiţi ca reprezentant sau delegat într-o localitate din alt judeţ, e important de ştiut că <u>nu veţi putea vota</u>. Un cetăţean român cu drept de vot poate vota doar în:</p>
+                    <ul class="list list-bulleted">
+                      <li>localitatea de domiciliu sau de reședință (la secția de vot unde este arondat);</li>
+                      <li>interiorul județului în care are domiciliul sau reședința, pe liste suplimentare, în caz că este plecat din localitatea în care locuiește.</li>
+                    </ul>
                   </dd>
                 </dl>
                 <dl>
