--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                           Confirm pe propria răspundere că sunt cetăţean român cu drept de vot şi nu sunt candidat în alegeri, soţ/soţie, rudă sau afin până la gradul al doilea inclusiv cu vreunul dintre candidaţii în alegeri (<a href="#candidati" data-toggle="modal" role="button">vezi toți candidații Uniunii Salvați România</a>)
                         </label>
                       </div>
-                      <br><p>Completează următoarele date întocmai ca în actul de identitate:</p><br>
+                      <p>Completează următoarele date întocmai ca în actul de identitate:</p>
                       <div class="row">
                         <div class="col-xs-6">
                           <div class="form-group required">
@@ -533,10 +533,11 @@
                   <div role="tabpanel" class="tab-pane fade" id="delegat">
                     <form class="form-delegat" method="post">
                       <input type="hidden" name="tip" value="delegat">
-                      <p>În plus faţă de alegerile locale din acest an, <strong>delegatul</strong> poate asista la <em>toate</em> operaţiunile electorale dintr-o secţie de votare în ziua alegerilor (11 decembrie 2016), începând cu ora 6:00 şi terminând cu momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea). <br><br>Aşadar, acesta poate asista inclusiv la operaţiunea de numărare a voturilor din secţia respectivă (operaţiune care începe în ziua alegerilor la ora 21:00, după închiderea localului secţiei de votare).</p>
+                      <p>În plus faţă de alegerile locale din acest an, <strong>delegatul</strong> poate asista la <em>toate</em> operaţiunile electorale dintr-o secţie de votare în ziua alegerilor (11 decembrie 2016), începând cu ora 6:00 şi terminând cu momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</p>
+                      <p>Aşadar, acesta poate asista inclusiv la operaţiunea de numărare a voturilor din secţia respectivă (operaţiune care începe în ziua alegerilor la ora 21:00, după închiderea localului secţiei de votare).</p>
                       <p>Poate staţiona în spaţiul stabilit în sala de votare de către preşedintele biroului electoral al secţiei de votare şi are dreptul de a sesiza în scris preşedintele biroului electoral în cazul constatării unor neregularităţi. Nu primeşte indemnizaţie din partea statului.</p>
-                      <p><strong>Termen limită înscriere:</strong> <mark>2 decembrie</mark></p><br>
-                      <p>Completează următoarele date întocmai ca în actul de identitate:</p><br>
+                      <p><strong>Termen limită înscriere:</strong> <mark>2 decembrie</mark></p>
+                      <p>Completează următoarele date întocmai ca în actul de identitate:</p>
                       <div class="row">
                         <div class="col-xs-6">
                           <div class="form-group required">
@@ -978,9 +979,11 @@
                 </dl>
                 <dl>
                   <dt>De unde şi când îmi iau indemnizaţia după ziua votului?</dt>
-                  <dd>Reprezentanţii vor afla locul şi data când îşi vor primi indemnizaţia de la preşedintele secţiei de votare. <a href="http://legeaz.net/monitorul-oficial-691-2016/hg-637-2016-cheltuieli-pregatire-organizare-alegeri-senat-cdep-2016">H.G. nr. 637/2016</a> prevede doar următoarele:<br>
-                    Art.5 – (2) La alegerile pentru Senat şi Camera Deputaţilor din anul 2016, Ministerul Afacerilor Interne asigură, prin bugetele instituţiilor prefectului, sumele necesare acoperirii următoarelor categorii de cheltuieli:<br>
-                    a) indemnizaţiile membrilor birourilor electorale de circumscripţie, ai oficiilor electorale şi ai birourilor electorale ale secţiilor de votare, precum şi indemnizaţiile pentru cheltuieli de protocol ale acestora.</dd>
+                  <dd>
+                    <p>Reprezentanţii vor afla locul şi data când îşi vor primi indemnizaţia de la preşedintele secţiei de votare. <a href="http://legeaz.net/monitorul-oficial-691-2016/hg-637-2016-cheltuieli-pregatire-organizare-alegeri-senat-cdep-2016">H.G. nr. 637/2016</a> prevede doar următoarele:</p>
+                    <p>Art.5 – (2) La alegerile pentru Senat şi Camera Deputaţilor din anul 2016, Ministerul Afacerilor Interne asigură, prin bugetele instituţiilor prefectului, sumele necesare acoperirii următoarelor categorii de cheltuieli:</p>
+                    <p>a) indemnizaţiile membrilor birourilor electorale de circumscripţie, ai oficiilor electorale şi ai birourilor electorale ale secţiilor de votare, precum şi indemnizaţiile pentru cheltuieli de protocol ale acestora.</p>
+                  </dd>
                 </dl>
               </div>
             </li>
